# gui-for-gcp-emulators

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.override.arm.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: playwright.yml  release.yml  test-and-release.yml
doc/dev/: recipes.md
docker/caddy/: Caddyfile
src/: App.tsx  main.tsx  normalize.css  styles.css  theme.ts  theme.tsx
src-pubsub2bq/: Cargo.toml  README.md
src-pubsub2bq/src/: main.rs  push2bq.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/api/: bigquery.dataset.ts  bigquery.table.ts  bigquery.ts  common.ts  firestore.database.ts  firestore.ts  gcp.pubsub.ts  pubsub.schema.ts  pubsub.subscription.ts  pubsub.topic.ts  pubsub.ts
src/components/: Header.tsx
src/components/bigquery/: Dataset.tsx  DatasetCreate.tsx  DatasetList.tsx  DatasetsList.tsx  Models.tsx
src/components/emulator/: Settings.tsx  Status.tsx
src/components/firestore/: Database.tsx  DatabaseCreate.tsx  DatabasesList.tsx  Models.tsx
src/components/form/: Emulator.tsx  EmulatorConnection.tsx
src/components/navigation/: ConfirmationDialog.tsx  Nav.tsx  NavItem.tsx
src/components/pubsub/: PublishMessage.tsx  PullMessage.tsx  PullMessages.tsx  Schema.tsx  SchemaCreate.tsx  SchemaDefinition.tsx  SchemaList.tsx  SchemasList.tsx  Subscription.tsx  SubscriptionCreate.tsx  SubscriptionList.tsx  SubscriptionsList.tsx  Topic.tsx  TopicCreate.tsx  TopicDefinition.tsx  TopicList.tsx  TopicsList.tsx
src/components/ui/: CloseButton.tsx  ConfirmationDialog.tsx  CopyableSyntaxHighlighter.tsx  HelpLink.tsx  NotYetImplemented.tsx  PageTitle.tsx  Title.tsx
src/contexts/: emulators.tsx
src/hooks/: Pubsub.tsx  usePubsub.ts
src/pages/: BigQuery.tsx  Bigtable.tsx  Datastore.tsx  Firestore.tsx  Header.tsx  Home.tsx  Layout.tsx  NoMatch.tsx  PageLayout.tsx  PageLogo.tsx  Pubsub.tsx  Settings.tsx  Spanner.tsx
src/utils/: emulator.ts  openlink.ts  pubsub.ts
tests/e2e/: bigquery.spec.ts  common.fixtures.ts  firestore.spec.ts  homepage.spec.ts  pubsub.fixture.ts  pubsub.fixtures.ts  pubsub.schema.spec.ts  pubsub.subscription.spec.ts  pubsub.topic.spec.ts  settings.spec.ts
