[package]
name = "gcp-emulator-gui"
version = "0.4.1"
description = "A Tauri App"
authors = ["Fabien Dosse"]
license = "GPL-3.0-or-later"
repository = "https://github.com/FabienD/gui-for-gcp-emulator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
